Статику подключил, Тестовая страница готова (urls, views, templates)

--- a/DjangoCarousel/carousel/templates/carousel/index.html
+++ b/DjangoCarousel/carousel/templates/carousel/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'js/bootstrap.bundle.min.js' %}">
+    <link rel="stylesheet" href="{% static 'carousel/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'carousel/js/bootstrap.bundle.min.js' %}">
 </head>
 
 
 <body>
 <header>
-
+    <p>тест</p>
+    {{ data }}
 </header>
 
 <main>
