--- a/DjangoCarousel/carousel/templates/carousel/index.html
+++ b/DjangoCarousel/carousel/templates/carousel/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'carousel/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'carousel/css/carousel.css' %}">
     <link rel="stylesheet" href="{% static 'carousel/js/bootstrap.bundle.min.js' %}">
+    <link rel="stylesheet" href="{% static 'carousel/js/carousel.js' %}">
+
 </head>
 
 
